--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "Test",
-  "description": "Test",
-  "version": "0.0.0",
-  "main": "bot.js",
+  "name": "introduction",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "child_process": "^1.0.2",
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
+    "openai-api": "^1.2.6",
+    "pm2": "^5.2.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   }
 }
